[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art Assets/PaintShaker.png" type="Texture" id=1]
[ext_resource path="res://Art Assets/PaintShakerFront.png" type="Texture" id=2]
[ext_resource path="res://Art Assets/EKey.png" type="Texture" id=3]
[ext_resource path="res://Art Assets/UI Assets/ProgressBarSprite.png" type="Texture" id=4]
[ext_resource path="res://Art Assets/UI Assets/ProgressBarSpritProgresse.png" type="Texture" id=5]
[ext_resource path="res://Art Assets/UI Assets/ProgressBarSpritBadProgresse.png" type="Texture" id=6]
[ext_resource path="res://Devices/PaintShaker.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.40528
height = 26.4953

[sub_resource type="Animation" id=2]
resource_name = "KeyPress"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("KeyPressSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KeyPressSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PaintShakerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PaintShakerFrontSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PaintShakerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PaintShakerFrontSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PaintCanPosition:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, -8 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shaking"
length = 0.25
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PaintShakerFrontSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PaintShakerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PaintCanPosition:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -8 ), Vector2( 2, -8 ), Vector2( 0, -8 ), Vector2( -1, -8 ), Vector2( 1, -8 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "update_paint_can_during_shaking"
}, {
"args": [  ],
"method": "update_paint_can_during_shaking"
}, {
"args": [  ],
"method": "update_paint_can_during_shaking"
}, {
"args": [  ],
"method": "update_paint_can_during_shaking"
}, {
"args": [  ],
"method": "update_paint_can_during_shaking"
} ]
}

[node name="PaintShaker" type="Node2D" groups=["PaintShaker"]]
script = ExtResource( 7 )

[node name="PaintShakerSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 5

[node name="PaintCanPosition" type="Position2D" parent="."]
position = Vector2( 2, -8 )

[node name="PaintShakerFrontSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 5

[node name="InteractArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2( -15, -6 )
rotation = -2.08741
shape = SubResource( 1 )

[node name="GoodProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -5.0
margin_top = -61.0
margin_right = 35.0
margin_bottom = -21.0
mouse_filter = 2
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 4

[node name="BadProgress" type="TextureProgress" parent="."]
visible = false
margin_left = -5.0
margin_top = -61.0
margin_right = 35.0
margin_bottom = -21.0
mouse_filter = 2
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )
fill_mode = 4

[node name="TextureTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="KeyPressSprite" type="Sprite" parent="."]
position = Vector2( 15, 14 )
texture = ExtResource( 3 )
hframes = 4

[node name="KeyPressAnimator" type="AnimationPlayer" parent="."]
anims/KeyPress = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="ShakingAnimation" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Shaking = SubResource( 4 )

[connection signal="body_entered" from="InteractArea" to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_InteractArea_body_exited"]
[connection signal="timeout" from="TextureTimer" to="." method="_on_TextureTimer_timeout"]
